# aichat

./: API_CONFIG_EXAMPLES.md  README_API_CONFIG.md  SOCKS5_PROXY_GUIDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
docs/: filesystem-service.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: database.sqlite
src-tauri/src/: database.rs  lib.rs  storage_service.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/agents/[id]/chat/: page.tsx
src/app/agents/[id]/edit/: page.tsx
src/app/chat/: ChatInterface.tsx  page.tsx
src/app/components/: APIAutoFetchConfig.tsx  AdvancedProviderConfig.tsx  BalanceAPIConfig.tsx  FilesystemDemo.tsx  JsonStructureBuilder.tsx  MCPSettings.tsx  MCPTestButton.tsx  MainLayout.tsx  index.ts
src/app/components/Sidebar/: Sidebar.tsx
src/app/config/: providers.ts
src/app/scenes/: page.tsx
src/app/scenes/[id]/edit/: page.tsx
src/app/scenes/[id]/sessions/: page.tsx
src/app/scenes/[id]/sessions/[sessionId]/: page.tsx
src/app/scenes/create/: page.tsx
src/app/scenes/create/edit/: page.tsx
src/app/services/: ai.ts  apiAutoFetch.ts  backend-storage.ts  filesystem.ts  http.ts  index.ts  log.ts  mcp.ts  storage.ts  unified-storage.ts
src/app/settings/: SettingsInterface.tsx  page.tsx
src/app/types/: index.ts
src/components/ui/: markdown.tsx
src/lib/: utils.ts
