[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Tauri构建工具，用于编译时处理Tauri应用
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# JSON序列化和反序列化库
serde_json = "1.0"
# Rust数据结构的序列化和反序列化框架
serde = { version = "1.0", features = ["derive"] }
# 日志门面库
log = "0.4"
# Tauri核心库，用于构建跨平台桌面应用
tauri = { version = "2.5.0", features = [] }
# 结构化日志库，提供高级日志记录功能
tracing = "0.1.41"
# tracing的订阅器库，提供日志收集和处理功能
# env-filter特性允许通过环境变量控制日志级别
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# HTTP客户端库，支持SOCKS5代理
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
# 异步运行时
tokio = { version = "1.45", features = ["full"] }
# URL解析库
url = "2.0"
# 异步流处理工具
futures-util = "0.3"
